--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   animated_text_kit: ^4.2.2
   http: ^1.1.0
+  google_generative_ai: ^0.2.1
 
 dev_dependencies:
   flutter_test:
